--- a/arena-traits/Cargo.toml
+++ b/arena-traits/Cargo.toml
@@ -2,6 +2,8 @@
 name = "arena-traits"
 version = "0.1.1"
 edition = "2021"
+license = "CC0-1.0"
+description = "Traits for arenas"
 
 [dependencies]
 id-arena = { workspace = true, optional = true }
