--- a/ssa-canon/Cargo.toml
+++ b/ssa-canon/Cargo.toml
@@ -2,6 +2,8 @@
 name = "ssa-canon"
 version = "0.1.1"
 edition = "2021"
+license = "CC0-1.0"
+description = "Simple SSA IR"
 
 [dependencies]
 anyhow = "1.0.86"
