--- a/ssa-cc/Cargo.toml
+++ b/ssa-cc/Cargo.toml
@@ -2,6 +2,8 @@
 name = "ssa-cc"
 version = "0.1.1"
 edition = "2021"
+license = "CC0-1.0"
+description = "Traits for compiling SSA IR to C"
 
 [dependencies]
 anyhow = "1.0.86"
