--- a/ssa-impls/Cargo.toml
+++ b/ssa-impls/Cargo.toml
@@ -2,6 +2,8 @@
 name = "ssa-impls"
 version = "0.1.1"
 edition = "2021"
+license = "CC0-1.0"
+description = "Implementation of common SSA algorithms"
 
 [dependencies]
 arena-traits = { version = "0.1.0", path = "../arena-traits" }
