--- a/ssa-reloop/Cargo.toml
+++ b/ssa-reloop/Cargo.toml
@@ -2,6 +2,8 @@
 name = "ssa-reloop"
 version = "0.1.1"
 edition = "2021"
+license = "CC0-1.0"
+description = "Relooper tool for SSA IR"
 
 [dependencies]
 arena-traits = { version = "0.1.0", path = "../arena-traits" }
