--- a/ssa-traits/Cargo.toml
+++ b/ssa-traits/Cargo.toml
@@ -2,6 +2,8 @@
 name = "ssa-traits"
 version = "0.1.1"
 edition = "2021"
+license = "CC0-1.0"
+description = "Traits for SSA IR"
 
 [dependencies]
 anyhow = "1.0"
