--- a/ssa-translation/Cargo.toml
+++ b/ssa-translation/Cargo.toml
@@ -2,6 +2,8 @@
 name = "ssa-translation"
 version = "0.1.1"
 edition = "2021"
+license = "CC0-1.0"
+description = "Traits for translating SSA IR"
 
 [dependencies]
 anyhow = "1.0.86"
