--- a/ssa-canon/Cargo.toml
+++ b/ssa-canon/Cargo.toml
@@ -9,4 +9,5 @@ description = "Simple SSA IR"
 anyhow = "1.0.86"
 arena-traits = { version = "0.1.0", path = "../arena-traits", features = ["id-arena"] }
 id-arena.workspace = true
+sift-trait = { version = "0.1.0", path = "../sift-trait" }
 ssa-traits = { version = "0.1.0", path = "../ssa-traits" }
