--- a/ssa-translation/Cargo.toml
+++ b/ssa-translation/Cargo.toml
@@ -10,3 +10,4 @@ anyhow = "1.0.86"
 arena-traits = { version = "0.1.0", path = "../arena-traits" }
 either = "1.13.0"
 ssa-traits = { version = "0.1.0", path = "../ssa-traits" }
+valser = "0.1.1"
