--- a/ssa-translation/Cargo.toml
+++ b/ssa-translation/Cargo.toml
@@ -6,8 +6,11 @@ license = "CC0-1.0"
 description = "Traits for translating SSA IR"
 
 [dependencies]
-anyhow = "1.0.86"
+anyhow = {version="1.0",default-features=false}
 arena-traits = { version = "0.1.0", path = "../arena-traits" }
 either = "1.13.0"
 ssa-traits = { version = "0.1.0", path = "../ssa-traits" }
-valser = "0.1.1"
+valser = {version="0.1.1",default-features=false,features=["alloc"]}
+
+[features]
+std = ["anyhow/std","ssa-traits/std"]
