--- a/ssa-rust/Cargo.toml
+++ b/ssa-rust/Cargo.toml
@@ -8,6 +8,7 @@ description = "SSA to Rust converter"
 [dependencies]
 anyhow = "1.0.87"
 arena-traits = { version = "0.1.2", path = "../arena-traits" }
+cfg-traits = { version = "0.1.0", path = "../cfg-traits" }
 either = "1.13.0"
 id-arena = { workspace = true, optional = true }
 proc-macro2 = "1.0.86"
