--- a/register-machine-traits/Cargo.toml
+++ b/register-machine-traits/Cargo.toml
@@ -2,6 +2,8 @@
 name = "register-machine-traits"
 version = "0.1.0"
 edition = "2021"
+license = "CC0-1.0"
+decsription = "Traits for register machines"
 
 [dependencies]
 arena-traits = { version = "0.1.4", path = "../arena-traits" }
