--- a/arena-traits/Cargo.toml
+++ b/arena-traits/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "arena-traits"
-version = "0.1.4"
+version = "0.2.0-alpha.0"
 edition = "2021"
 license = "CC0-1.0"
 description = "Traits for arenas"
