--- a/cfg-traits/Cargo.toml
+++ b/cfg-traits/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "cfg-traits"
-version = "0.1.0"
+version = "0.2.0-alpha.0"
 edition = "2021"
 license = "CC0-1.0"
 description = "Traits for Control Flow Graphs"
 
 [dependencies]
-arena-traits = { version = "0.1.4", path = "../arena-traits" }
+arena-traits = { version = "0.2.0-alpha.0", path = "../arena-traits" }
 either = "1.13.0"
