--- a/ssa-traits/Cargo.toml
+++ b/ssa-traits/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "ssa-traits"
-version = "0.1.4"
+version = "0.2.0-alpha.0"
 edition = "2021"
 license = "CC0-1.0"
 description = "Traits for SSA IR"
 
 [dependencies]
 anyhow = {version="1.0",default-features=false}
-arena-traits = { version = "0.1.0", path = "../arena-traits" }
-cfg-traits = { version = "0.1.0", path = "../cfg-traits" }
+arena-traits = { version = "0.2.0-alpha.0", path = "../arena-traits" }
+cfg-traits = { version = "0.2.0-alpha.0", path = "../cfg-traits" }
 either = {version="1.13.0",default-features=false}
 
 [features]
