--- a/ssa-translation/Cargo.toml
+++ b/ssa-translation/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
 name = "ssa-translation"
-version = "0.1.4"
+version = "0.2.0-alpha.0"
 edition = "2021"
 license = "CC0-1.0"
 description = "Traits for translating SSA IR"
 
 [dependencies]
 anyhow = {version="1.0",default-features=false}
-arena-traits = { version = "0.1.0", path = "../arena-traits" }
-cfg-traits = { version = "0.1.0", path = "../cfg-traits" }
+arena-traits = { version = "0.2.0-alpha.0", path = "../arena-traits" }
+cfg-traits = { version = "0.2.0-alpha.0", path = "../cfg-traits" }
 either = "1.13.0"
-ssa-traits = { version = "0.1.0", path = "../ssa-traits" }
+ssa-traits = { version = "0.2.0-alpha.0", path = "../ssa-traits" }
 valser = {version="0.1.1",default-features=false,features=["alloc"]}
 
 [features]
