--- a/register-machine-traits/Cargo.toml
+++ b/register-machine-traits/Cargo.toml
@@ -3,7 +3,7 @@ name = "register-machine-traits"
 version = "0.2.0-alpha.0"
 edition = "2021"
 license = "CC0-1.0"
-decsription = "Traits for register machines"
+description = "Traits for register machines"
 
 [dependencies]
 arena-traits = { version = "0.2.0-alpha.0", path = "../arena-traits" }
