--- a/tac-traits/Cargo.toml
+++ b/tac-traits/Cargo.toml
@@ -3,7 +3,7 @@ name = "tac-traits"
 version = "0.2.0-alpha.0"
 edition = "2021"
 license = "CC0-1.0"
-decsription = "Traits for Three Address Code"
+description = "Traits for Three Address Code"
 
 [dependencies]
 arena-traits = { version = "0.2.0-alpha.0", path = "../arena-traits" }
