--- a/ssa-rust/Cargo.toml
+++ b/ssa-rust/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ssa-rust"
-version = "0.2.0-alpha.1"
+version = "0.2.0"
 edition = "2021"
 license = "CC0-1.0"
 description = "SSA to Rust converter"
