--- a/tac-traits/Cargo.toml
+++ b/tac-traits/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tac-traits"
-version = "0.2.0-alpha.1"
+version = "0.2.0"
 edition = "2021"
 license = "CC0-1.0"
 description = "Traits for Three Address Code"
