--- a/ssa-canon/Cargo.toml
+++ b/ssa-canon/Cargo.toml
@@ -10,5 +10,7 @@ anyhow = "1.0.86"
 arena-traits = { version = "0.2.0-alpha.0", path = "../arena-traits", features = ["id-arena"] }
 cfg-traits = { version = "0.2.0-alpha.0", path = "../cfg-traits" }
 id-arena.workspace = true
+lending-iterator = "0.1.7"
 sift-trait = { version = "0.2.0-alpha.0", path = "../sift-trait" }
 ssa-traits = { version = "0.2.0-alpha.0", path = "../ssa-traits" }
+
