--- a/ssa-cc/Cargo.toml
+++ b/ssa-cc/Cargo.toml
@@ -11,6 +11,7 @@ arena-traits = { version = "0.2.0-alpha.0", path = "../arena-traits" }
 cfg-traits = { version = "0.2.0-alpha.0", path = "../cfg-traits" }
 either = "1.13.0"
 id-arena = { workspace = true, optional = true }
+lending-iterator = "0.1.7"
 
 ssa-canon = { version = "0.2.0-alpha.0", path = "../ssa-canon", optional = true }
 
