--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
-members=["arena-traits", "ssa-traits", "ssa-impls",  "ssa-translation", "ssa-reloop", "ssa-cc", "ssa-canon","sift-trait", "ssa-rust", "cfg-traits", "register-machine-traits", "tac-traits","onion"] # , "ssa-trace"
+members=["arena-traits", "ssa-traits", "ssa-impls",  "ssa-translation", "ssa-reloop", "ssa-cc", "sift-trait", "ssa-rust", "cfg-traits", "register-machine-traits", "tac-traits","onion","ssa-canon"] # , "ssa-trace"
+# "ssa-canon","
 resolver="2"
 
 [workspace.dependencies]
