--- a/ssa-impls/Cargo.toml
+++ b/ssa-impls/Cargo.toml
@@ -8,4 +8,5 @@ description = "Implementation of common SSA algorithms"
 [dependencies]
 arena-traits = { version = "0.2.0-alpha.0", path = "../arena-traits" }
 cfg-traits = { version = "0.2.0-alpha.0", path = "../cfg-traits" }
+lending-iterator = "0.1.7"
 ssa-traits = { version = "0.2.0-alpha.0", path = "../ssa-traits" }
