--- a/ssa-rust/Cargo.toml
+++ b/ssa-rust/Cargo.toml
@@ -11,6 +11,7 @@ arena-traits = { version = "0.2.0-alpha.0", path = "../arena-traits" }
 cfg-traits = { version = "0.2.0-alpha.0", path = "../cfg-traits" }
 either = "1.13.0"
 id-arena = { workspace = true, optional = true }
+lending-iterator = "0.1.7"
 proc-macro2 = "1.0.86"
 quasiquote = "0.1.1"
 quote = "1.0.37"
