--- a/ssa-traits/Cargo.toml
+++ b/ssa-traits/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = {version="1.0",default-features=false}
 arena-traits = { version = "0.2.0-alpha.0", path = "../arena-traits" }
 cfg-traits = { version = "0.2.0-alpha.0", path = "../cfg-traits" }
 either = {version="1.13.0",default-features=false}
+lending-iterator = "0.1.7"
 
 [features]
 std = ["anyhow/std"]
