--- a/cfg-traits/Cargo.toml
+++ b/cfg-traits/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cfg-traits"
-version = "0.2.0"
+version = "0.3.0-alpha.0"
 edition = "2021"
 license = "CC0-1.0"
 description = "Traits for Control Flow Graphs"
