--- a/ssa-canon/Cargo.toml
+++ b/ssa-canon/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ssa-canon"
-version = "0.2.0"
+version = "0.3.0-alpha.0"
 edition = "2021"
 license = "CC0-1.0"
 description = "Simple SSA IR"
@@ -8,9 +8,9 @@ description = "Simple SSA IR"
 [dependencies]
 anyhow = "1.0.86"
 arena-traits = { version = "0.2.0-alpha.0", path = "../arena-traits", features = ["id-arena"] }
-cfg-traits = { version = "0.2.0-alpha.0", path = "../cfg-traits" }
+cfg-traits = { version = "0.3.0-alpha.0", path = "../cfg-traits" }
 id-arena.workspace = true
 lending-iterator = "0.1.7"
 sift-trait = { version = "0.2.0-alpha.0", path = "../sift-trait" }
-ssa-traits = { version = "0.2.0-alpha.0", path = "../ssa-traits" }
+ssa-traits = { version = "0.3.0-alpha.0", path = "../ssa-traits" }
 
