--- a/ssa-impls/Cargo.toml
+++ b/ssa-impls/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "ssa-impls"
-version = "0.2.0"
+version = "0.3.0-alpha.0"
 edition = "2021"
 license = "CC0-1.0"
 description = "Implementation of common SSA algorithms"
 
 [dependencies]
 arena-traits = { version = "0.2.0-alpha.0", path = "../arena-traits" }
-cfg-traits = { version = "0.2.0-alpha.0", path = "../cfg-traits" }
+cfg-traits = { version = "0.3.0-alpha.0", path = "../cfg-traits" }
 lending-iterator = "0.1.7"
-ssa-traits = { version = "0.2.0-alpha.0", path = "../ssa-traits" }
+ssa-traits = { version = "0.3.0-alpha.0", path = "../ssa-traits" }
