--- a/ssa-rust/Cargo.toml
+++ b/ssa-rust/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ssa-rust"
-version = "0.2.0"
+version = "0.3.0-alpha.0"
 edition = "2021"
 license = "CC0-1.0"
 description = "SSA to Rust converter"
@@ -8,7 +8,7 @@ description = "SSA to Rust converter"
 [dependencies]
 anyhow = "1.0.87"
 arena-traits = { version = "0.2.0-alpha.0", path = "../arena-traits" }
-cfg-traits = { version = "0.2.0-alpha.0", path = "../cfg-traits" }
+cfg-traits = { version = "0.3.0-alpha.0", path = "../cfg-traits" }
 either = "1.13.0"
 id-arena = { workspace = true, optional = true }
 lending-iterator = "0.1.7"
@@ -16,9 +16,9 @@ proc-macro2 = "1.0.86"
 quasiquote = "0.1.1"
 quote = "1.0.37"
 relooper = "0.1.0"
-ssa-canon = { version = "0.2.0-alpha.0", path = "../ssa-canon", optional = true }
-ssa-reloop = { version = "0.2.0-alpha.0", path = "../ssa-reloop" }
-ssa-traits = { version = "0.2.0-alpha.0", path = "../ssa-traits" }
+ssa-canon = { version = "0.3.0-alpha.0", path = "../ssa-canon", optional = true }
+ssa-reloop = { version = "0.3.0-alpha.0", path = "../ssa-reloop" }
+ssa-traits = { version = "0.3.0-alpha.0", path = "../ssa-traits" }
 syn = "2.0.77"
 
 [features]
