--- a/tac-traits/Cargo.toml
+++ b/tac-traits/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "tac-traits"
-version = "0.2.0"
+version = "0.3.0-alpha.0"
 edition = "2021"
 license = "CC0-1.0"
 description = "Traits for Three Address Code"
 
 [dependencies]
 arena-traits = { version = "0.2.0-alpha.0", path = "../arena-traits" }
-cfg-traits = { version = "0.2.0-alpha.0", path = "../cfg-traits" }
-register-machine-traits = { version = "0.2.0-alpha.0", path = "../register-machine-traits" }
+cfg-traits = { version = "0.3.0-alpha.0", path = "../cfg-traits" }
+register-machine-traits = { version = "0.3.0-alpha.0", path = "../register-machine-traits" }
 sift-trait = { version = "0.2.0-alpha.0", path = "../sift-trait" }
