--- a/cfg-traits/Cargo.toml
+++ b/cfg-traits/Cargo.toml
@@ -8,3 +8,4 @@ description = "Traits for Control Flow Graphs"
 [dependencies]
 arena-traits = { version = "0.2.0-alpha.0", path = "../arena-traits" }
 either = "1.13.0"
+lending-iterator = "0.1.7"
