--- a/ssa-canon/Cargo.toml
+++ b/ssa-canon/Cargo.toml
@@ -7,7 +7,7 @@ description = "Simple SSA IR"
 
 [dependencies]
 anyhow = "1.0.86"
-arena-traits = { version = "0.2.0-alpha.0", path = "../arena-traits", features = ["id-arena"] }
+arena-traits = { version = "0.2.2", path = "../arena-traits", features = ["id-arena"] }
 cfg-traits = { version = "0.3.0-alpha.0", path = "../cfg-traits" }
 id-arena.workspace = true
 lending-iterator = "0.1.7"
