--- a/ssa-reloop/Cargo.toml
+++ b/ssa-reloop/Cargo.toml
@@ -6,7 +6,7 @@ license = "CC0-1.0"
 description = "Relooper tool for SSA IR"
 
 [dependencies]
-arena-traits = { version = "0.2.0-alpha.0", path = "../arena-traits" }
+arena-traits = { version = "0.2.2", path = "../arena-traits" }
 cfg-traits = { version = "0.3.0-alpha.0", path = "../cfg-traits" }
 lending-iterator = "0.1.7"
 relooper = "0.1.0"
