--- a/tac-traits/Cargo.toml
+++ b/tac-traits/Cargo.toml
@@ -6,7 +6,7 @@ license = "CC0-1.0"
 description = "Traits for Three Address Code"
 
 [dependencies]
-arena-traits = { version = "0.2.0-alpha.0", path = "../arena-traits" }
+arena-traits = { version = "0.2.3" }
 cfg-traits = { version = "0.2.0-alpha.0", path = "../cfg-traits" }
 register-machine-traits = { version = "0.2.0-alpha.0", path = "../register-machine-traits" }
 sift-trait = { version = "0.2.0-alpha.0", path = "../sift-trait" }
