--- a/cfg-traits/Cargo.toml
+++ b/cfg-traits/Cargo.toml
@@ -6,5 +6,5 @@ license = "CC0-1.0"
 description = "Traits for Control Flow Graphs"
 
 [dependencies]
-arena-traits = { version = "0.2.0-alpha.0", path = "../arena-traits" }
+arena-traits = { version = "0.2.3" }
 either = "1.13.0"
