--- a/ssa-pliron-compat/Cargo.toml
+++ b/ssa-pliron-compat/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.89"
-arena-traits = { version = "0.2.0-alpha.1", path = "../arena-traits" }
+arena-traits = { version = "0.2.3" }
 cfg-traits = { version = "0.2.0-alpha.1", path = "../cfg-traits" }
 linkme = "0.3.28"
 pliron = "0.5.0"
