--- a/onion/Cargo.toml
+++ b/onion/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "type-onion"
-version = "0.2.3"
+version = "0.3.0-alpha.2"
 edition = "2021"
 license = "CC0-1.0"
 description = "Merge some lists of types, returning metadata to manage them"
