--- a/sift-trait/Cargo.toml
+++ b/sift-trait/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sift-trait"
-version = "0.2.3"
+version = "0.3.0-alpha.2"
 edition = "2021"
 license = "CC0-1.0"
 description = "Sift a value out of another"
