--- a/ssa-trace/Cargo.toml
+++ b/ssa-trace/Cargo.toml
@@ -8,4 +8,4 @@ anyhow = "1.0.89"
 arena-traits = { version = "0.2.3" }
 cfg-traits = { version = "0.2.0-alpha.1", path = "../cfg-traits" }
 ssa-traits = { version = "0.2.0-alpha.1", path = "../ssa-traits" }
-valser = {version="0.1.1",default-features=false,features=["alloc"]}
+valser = {version="^0.1.1",default-features=false,features=["alloc"]}
