--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,19 @@
 [workspace]
-members=["ssa-traits", "ssa-impls",  "ssa-translation", "ssa-reloop", "ssa-cc", "ssa-canon","sift-trait", "ssa-rust", "cfg-traits", "register-machine-traits", "tac-traits","onion"] # , "ssa-trace"
-resolver="2"
+members = [
+    "crates/ssa-traits",
+    "crates/ssa-impls",
+    "crates/ssa-translation",
+    "crates/ssa-reloop",
+    "crates/ssa-cc",
+    "crates/ssa-canon",
+    "crates/sift-trait",
+    "crates/ssa-rust",
+    "crates/cfg-traits",
+    "crates/register-machine-traits",
+    "crates/tac-traits",
+    "crates/onion",
+] # , "ssa-trace"
+resolver = "2"
 
 [workspace.dependencies]
 
