git dep for compat

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,6 @@ resolver = "2"
 
 id-arena = "2.2.1"
 
-cfg-traits-02 = { package = "cfg-traits", version = "^0.2.3" }
-ssa-traits-02 = { package = "ssa-traits", version = "^0.2.3" }
-tac-traits-02 = { package = "tac-traits", version = "^0.2.3" }
+cfg-traits-02 = { package = "cfg-traits", version = "^0.2.3", git = "https://github.com/portal-co/codegen-utils.git", branch = "master" }
+ssa-traits-02 = { package = "ssa-traits", version = "^0.2.3", git = "https://github.com/portal-co/codegen-utils.git", branch = "master" }
+tac-traits-02 = { package = "tac-traits", version = "^0.2.3", git = "https://github.com/portal-co/codegen-utils.git", branch = "master" }
